--- a/contactStyle.css
+++ b/contactStyle.css
@@ -206,8 +206,11 @@ header {
 /* logo inside Navigation */
 
 .nav-container + .logo {
-  height: 50px;
   margin-bottom: 2%;
+}
+
+.c-logo {
+  height: 50px;
 }
 
 /******* nav Icons styling*********/
