--- a/style.css
+++ b/style.css
@@ -224,10 +224,14 @@ header {
 /* logo inside Navigation */
 
 .nav-container + .logo {
-  height: 50px;
+  /* height: 50px; */
   /* border-bottom: 2px solid black;
    border-top: 2px solid green; */
   margin-bottom: 2%;
+}
+
+.c-logo {
+  height: 50px;
 }
 
 /******* nav Icons styling*********/
