--- a/contactStyle.css
+++ b/contactStyle.css
@@ -87,12 +87,13 @@ header {
   bottom: 0;
   left: 0;
   height: 100vh;
-  z-index: 1;
+  z-index: 8;
   background: white;
   transform: translateY(-100%);
   transition: transform 0.65s ease-in-out;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 
 #userInput {
@@ -106,6 +107,7 @@ header {
   font-size: 2rem;
   margin: 0 auto;
   margin-top: 5%;
+  padding: 0.5em 0;
 }
 
 #userInput:hover,
@@ -115,7 +117,7 @@ header {
 }
 
 .close-search-btn {
-  position: relative;
+  position: absolute;
   top: 2%;
   left: 2%;
 }
@@ -124,14 +126,27 @@ header {
   color: rgba(0, 0, 0, 0.5);
 }
 
+.result-container {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 1.5rem;
+}
+
 .result {
   height: 20vh;
   margin: 0 auto;
   margin-top: 5%;
-  width: 80%;
+  width: 100%;
   border-bottom: 1px solid grey;
   padding-bottom: 2%;
-  display: flex;
+  display: none;
+}
+
+.result-section-title {
+  padding-top: 1.5rem;
 }
 
 .trainer-details {
@@ -153,7 +168,9 @@ header {
   text-align: center;
   color: var(--mainColour);
   font-size: 2rem;
-  /* padding: ; */
+  padding: 0 0.6em;
+  width: max-content;
+  height: max-content;
 }
 
 .view-btn:hover {
