--- a/about.css
+++ b/about.css
@@ -290,6 +290,9 @@ header {
 
 /******* Cart styling *******/
 
+.cart {
+  position: relative;
+}
 .fa-cart-plus {
   position: relative;
   align-self: center;
@@ -307,6 +310,24 @@ header {
   border: 1px solid black;
 }
 
+.snipcart-items-count {
+  position: absolute;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  padding: 0.2em;
+  font-size: 1rem;
+  height: 1rem;
+  width: 1rem;
+  left: 40%;
+  bottom: 70%;
+  /* transform: translateX(-50%); */
+  text-align: center;
+}
+
+.snipcart-items-count:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
 /*******************
      hero styling
   ******************/
