--- a/sell.css
+++ b/sell.css
@@ -310,9 +310,12 @@ header {
   border-radius: 50%;
   padding: 0.2em;
   font-size: 1rem;
-  left: 50%;
-  bottom: 50%;
-  transform: translateX(-50%);
+  height: 1rem;
+  width: 1rem;
+  left: 40%;
+  bottom: 70%;
+  /* transform: translateX(-50%); */
+  text-align: center;
 }
 
 .snipcart-items-count:hover {
