--- a/contactStyle.css
+++ b/contactStyle.css
@@ -101,13 +101,17 @@ header {
   padding: 0 0.25em;
   width: 80%;
   height: 3.5rem;
-  border: none;
-  border-bottom: 2px solid rgb(131, 95, 95);
+  border: 1.5px solid rgb(131, 95, 95);
+  border-top-left-radius: 10000000000px;
+  border-top-right-radius: 10000000000px;
+  border-bottom-left-radius: 10000000000px;
+  border-bottom-right-radius: 10000000000px;
   outline: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 0 auto;
   margin-top: 5%;
-  padding: 0.5em 0;
+  padding: 0.5em 0.5em;
+  background-color: rgba(128, 128, 128, 0.3);
 }
 
 #userInput:hover,
